# neo4j-text2cypher

./: .gitignore  README.md  flan_t5_training.ipynb  inference.ipynb  pyproject.toml  sample_init.cypher  train_codet5.py
.claude/: settings.local.json
text2cypher_translator/: neo4j_client.py  service.py  text2cypher.py  text2cypher_codet5.py
text2cypher_translator/tests/: test_neo4j_client.py  test_service.py  test_service_integration.py  test_text2cypher.py
